# single-agent-manipulation-dataset

./: .gitignore  Dockerfile  README.md  cloud-run.tf  docker-tag.sh  index.html  main.py  nginx.conf  start.sh  terraform.tfstate  terraform.tfstate.backup
analysis/: data_analysis.ipynb  data_connection.py  data_preparation_pipeline.py  dataset_statistics.py  get_analytics_df.py  inter_annotation.py  main_analysis.py  model_comparison_analysis.py  plot_model_comparison.py  plot_overall_manipulation.py  pyproject.toml  test.py  test_2.py  test_json.py  test_kripp.py  voucher_giveout.py
analysis/comparison_zero_shot_trainer/: README.md  few_shot.json  get_few_shot_examples.py  model_comparison_results.json  zero_shot_fold_analysis.py  zs_analysis.py
analysis/comparison_zero_shot_trainer/data/: deepseek-chat.json  few_shot_items.csv  longformer_all_fold_predictions.csv
analysis/comparison_zero_shot_trainer/outputs/: deepseek-chat.json  gemini-2.0-flash-001.json  (+3 more)
analysis/data/: all_fold_predictions.csv  conversation-contexts.json  human_responses.json  user_scores.json  user_timing.json
analysis/utils/: filtering_testing.py
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/scratch/: main.py  pyproject.toml
prediction_modelling/: colab_runner.ipynb  controller.py  pyproject.toml
prediction_modelling/BERT_BiLSTM/: main.py  main.py.archive  simrat_code.py
prediction_modelling/data/: user_scores.json
prediction_modelling/hpc_runner/: CMD_cpu_test.sh  CMD_gpu_llama32-3.sh  CMD_gpu_longformer.sh  README.md  check_cuda.py  controller.py  evaluation_results.json  find_autoclass_models.py  longformer_results_analysis.py  slurm-22535030.out
prediction_modelling/local_runner/: check_cuda.py
prediction_modelling/open_router/: README.md  local_script.py.archive  main.py  script.py
prediction_modelling/utils/: custom_dataloader.py  stratified_splitter.py  train_classifier.py
prediction_modelling/zero_shot/: clean_up.py  main.py  zero_shot_prediction_analysis.py
(+73 files in other folders)
