[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Jack Contro <jack.contro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud = "^0.34.0"
google-cloud-core = "^2.4.1"
google-cloud-storage = "^2.18.2"
google-cloud-firestore = "^2.18.0"
ipython = "^8.27.0"
pandas = "^2.2.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
