[tool.poetry]
name = "prediction-modelling"
version = "0.1.0"
description = ""
authors = ["Jack Contro <jack.contro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.46.3"
torch = "^2.5.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
